name: octane
version: 0.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak
homepage: https://github.com/tfausak/octane
synopsis: A Rocket League replay parser.
description:
    <https://github.com/tfausak/octane#readme>
category: Game
extra-source-files:
    CHANGELOG.md
    README.md
    stack.yaml

source-repository head
    type: git
    location: https://github.com/tfausak/octane

library
    exposed-modules:
        Octane
        Octane.Main
        Octane.Types
        Octane.Types.Actor
        Octane.Types.ActorMap
        Octane.Types.Boolean
        Octane.Types.CacheItem
        Octane.Types.CacheProperty
        Octane.Types.Float32LE
        Octane.Types.Int32LE
        Octane.Types.Int64LE
        Octane.Types.KeyFrame
        Octane.Types.List
        Octane.Types.Mark
        Octane.Types.Message
        Octane.Types.ObjectMap
        Octane.Types.PCString
        Octane.Types.Property
        Octane.Types.Replay
        Octane.Types.Table
    build-depends:
        base ==4.8.*,
        binary ==0.7.*,
        bytestring ==0.10.*,
        containers ==0.5.*,
        data-binary-ieee754 ==0.4.*,
        text ==1.2.*
    default-language: Haskell2010
    hs-source-dirs: library
    other-modules:
        Octane.Core
    ghc-options: -Wall

executable octane
    main-is: Executable.hs
    build-depends:
        base -any,
        octane -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall

test-suite octane-test-suite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base -any,
        binary -any,
        bytestring -any,
        octane -any,
        tasty ==0.11.*,
        tasty-hspec ==1.1.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    other-modules:
        OctaneSpec
        Octane.MainSpec
        Octane.TypesSpec
        Octane.Types.ActorSpec
        Octane.Types.ActorMapSpec
        Octane.Types.BooleanSpec
        Octane.Types.CacheItemSpec
        Octane.Types.CachePropertySpec
        Octane.Types.Float32LESpec
        Octane.Types.Int32LESpec
        Octane.Types.Int64LESpec
        Octane.Types.KeyFrameSpec
        Octane.Types.ListSpec
        Octane.Types.MarkSpec
        Octane.Types.MessageSpec
        Octane.Types.ObjectMapSpec
        Octane.Types.PCStringSpec
        Octane.Types.PropertySpec
        Octane.Types.ReplaySpec
        Octane.Types.TableSpec
    ghc-options: -threaded -Wall
