name: octane
version: 0.2.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE.md
maintainer: Taylor Fausak
homepage: https://github.com/tfausak/octane
synopsis: A Rocket League replay parser.
description:
    <https://github.com/tfausak/octane#readme>
category: Game
extra-source-files:
    CHANGELOG.md
    README.md
    stack.yaml

source-repository head
    type: git
    location: https://github.com/tfausak/octane

library
    exposed-modules:
        Octane
        Octane.Main
        Octane.Type
        Octane.Type.Actor
        Octane.Type.ActorMap
        Octane.Type.CacheItem
        Octane.Type.CacheProperty
        Octane.Type.KeyFrame
        Octane.Type.Mark
        Octane.Type.Message
        Octane.Type.ObjectMap
        Octane.Type.Primitive
        Octane.Type.Primitive.Boolean
        Octane.Type.Primitive.Float32LE
        Octane.Type.Primitive.Int32LE
        Octane.Type.Primitive.Int64LE
        Octane.Type.Primitive.List
        Octane.Type.Primitive.PCString
        Octane.Type.Primitive.Dictionary
        Octane.Type.Property
        Octane.Type.Replay
    build-depends:
        base ==4.8.*,
        binary ==0.7.*,
        bytestring ==0.10.*,
        containers ==0.5.*,
        data-binary-ieee754 ==0.4.*,
        text ==1.2.*
    default-language: Haskell2010
    hs-source-dirs: library
    other-modules:
        Octane.Core
    ghc-options: -Wall

executable octane
    main-is: Executable.hs
    build-depends:
        base -any,
        octane -any
    default-language: Haskell2010
    hs-source-dirs: executable
    ghc-options: -threaded -Wall

test-suite octane-test-suite
    type: exitcode-stdio-1.0
    main-is: TestSuite.hs
    build-depends:
        base -any,
        binary -any,
        bytestring -any,
        octane -any,
        tasty ==0.11.*,
        tasty-hspec ==1.1.*
    default-language: Haskell2010
    hs-source-dirs: test-suite
    other-modules:
        OctaneSpec
        Octane.MainSpec
        Octane.TypeSpec
        Octane.Type.ActorSpec
        Octane.Type.ActorMapSpec
        Octane.Type.CacheItemSpec
        Octane.Type.CachePropertySpec
        Octane.Type.KeyFrameSpec
        Octane.Type.MarkSpec
        Octane.Type.MessageSpec
        Octane.Type.ObjectMapSpec
        Octane.Type.PrimitiveSpec
        Octane.Type.Primitive.BooleanSpec
        Octane.Type.Primitive.Float32LESpec
        Octane.Type.Primitive.Int32LESpec
        Octane.Type.Primitive.Int64LESpec
        Octane.Type.Primitive.ListSpec
        Octane.Type.Primitive.PCStringSpec
        Octane.Type.Primitive.DictionarySpec
        Octane.Type.PropertySpec
        Octane.Type.ReplaySpec
    ghc-options: -threaded -Wall
